<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:title="@string/sort_movies_by_title"
        android:key="@string/sort_movies_by_key"
        android:entries="@array/pref_sort_movies_by_labels"
        android:entryValues="@array/pref_sort_movies_by_values"
        android:defaultValue="@string/popular_value"
        android:summary="@string/popular_label"/>

    <EditTextPreference
        android:title="@string/columns_in_portrait_title"
        android:key="@string/columns_in_portrait_key"
        android:defaultValue="@string/columns_in_portrait_default"
        android:summary="@string/columns_in_portrait_default"
        android:inputType="number"/>

    <EditTextPreference
        android:title="@string/columns_in_landscape_title"
        android:key="@string/columns_in_landscape_key"
        android:defaultValue="@string/columns_in_landscape_default"
        android:summary="@string/columns_in_landscape_default"
        android:inputType="number"/>

</PreferenceScreen>