<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.android.popularmovies.MainActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <ProgressBar
        android:id="@+id/loadingProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerInParent="true"

        android:visibility="invisible"/>

    <TextView
        android:id="@+id/emptyViewTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/no_movies_found"

        android:layout_centerInParent="true"

        android:visibility="invisible"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/no_internet_connection_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"

        android:background="@android:color/holo_red_light"

        android:visibility="invisible">

        <android.support.constraint.Guideline
            android:id="@+id/vertical_guide_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2"/>

        <android.support.constraint.Guideline
            android:id="@+id/vertical_guide_70"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/no_internet_connection_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="@string/no_internet_connection"
            android:padding="16dp"
            app:fontFamily="sans-serif-condensed"
            android:gravity="center_vertical"
            app:autoSizeTextType="uniform"
            android:maxLines="1"

            app:layout_constraintLeft_toLeftOf="@id/vertical_guide_20"
            app:layout_constraintRight_toRightOf="@id/vertical_guide_70"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"

            android:src="@drawable/ic_cloud_off_black_24dp"
            android:padding="8dp"
            android:contentDescription="@string/no_internet_connection"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@id/vertical_guide_20"
            app:layout_constraintTop_toTopOf="@id/no_internet_connection_text"
            app:layout_constraintBottom_toBottomOf="@id/no_internet_connection_text"/>

        <!-- All AppCompatTextViews used in this app to be able
         to use autoSizeTextType and fontFamily attributes -->
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/refresh_internet_connection"
            android:layout_width="0dp"
            android:layout_height="0dp"

            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="@string/refresh"
            app:fontFamily="sans-serif-condensed"
            android:textColor="#0D47A1"
            android:textStyle="bold"
            android:padding="8dp"
            android:background="@drawable/refresh_internet_connection_text_selector"

            android:gravity="center_vertical"
            app:autoSizeTextType="uniform"
            android:maxLines="1"

            app:layout_constraintLeft_toLeftOf="@id/vertical_guide_70"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/no_internet_connection_text"
            app:layout_constraintBottom_toBottomOf="@id/no_internet_connection_text"/>

    </android.support.constraint.ConstraintLayout>

</RelativeLayout>
